# competitive-programming

./: README.md
abc003/abc003_a/: main.go
abc004/abc004_a/: main.go
abc006/abc006_a/: main.go
abc006/abc006_b/: main.go
abc006/abc006_c/: main.go
abc007/abc007_1/: .task.toml  main.go  testdata.yaml
abc007/abc007_2/: .task.toml  a.out  main.go  testdata.yaml
abc007/abc007_3/: main.go
abc008/abc008_1/: .task.toml  testdata.yaml
abc008/abc008_2/: .task.toml  main.go  testdata.yaml
abc008/abc008_4/: .task.toml  main.go  testdata.yaml
abc009/abc009_1/: .task.toml  a.out
abc009/abc009_2/: main.go  testdata.yaml
abc009/abc009_3/: testdata.yaml
abc009/abc009_4/: .task.toml  testdata.yaml
abc010/abc010_1/: .task.toml  a.out  main.go  testdata.yaml
abc010/abc010_2/: .task.toml  main.go  testdata.yaml
abc010/abc010_3/: .task.toml
abc010/abc010_4/: .task.toml  main.go  testdata.yaml
abc011/abc011_1/: .task.toml  main.go
abc011/abc011_2/: main.go
abc011/abc011_3/: main.go
abc011/abc011_4/: .task.toml  main.go  testdata.yaml
abc012/abc012_1/: .task.toml  testdata.yaml
abc012/abc012_2/: .task.toml  main.go
abc012/abc012_3/: .task.toml
abc012/abc012_4/: .task.toml  testdata.yaml
abc012/abc012_d/: .task.toml  a.out  main.go  testdata.yaml
abc013/abc013_1/: .task.toml  a.out  main.go  testdata.yaml
abc013/abc013_2/: main.go
abc013/abc013_3/: main.go  testdata.yaml
abc014/abc014_1/: a.out  main.go  testdata.yaml
abc014/abc014_2/: .task.toml  a.out  main.go
abc014/abc014_3/: .task.toml  main.go
abc014/abc014_4/: .task.toml
abc015/abc015_1/: testdata.yaml
abc015/abc015_2/: .task.toml  main.go
abc015/abc015_3/: .task.toml  main.go  testdata.yaml
abc015/abc015_4/: .task.toml
abc016/abc016_1/: .task.toml  a.out
abc016/abc016_2/: main.go
abc016/abc016_3/: .task.toml
abc016/abc016_4/: .task.toml  main.go
abc017/abc017_1/: .task.toml  main.go
abc017/abc017_2/: a.out  main.go
abc017/abc017_3/: .task.toml
abc018/abc018_1/: .task.toml  a.out  main.go  testdata.yaml
abc018/abc018_2/: main.go
abc018/abc018_3/: .task.toml  main.go
abc018/abc018_4/: .task.toml  testdata.yaml
abc018/abc018_d/: .task.toml  a.out  main.go  testdata.yaml
abc019/abc019_1/: .task.toml  a.out  main.go
abc019/abc019_2/: .task.toml  a.out  main.go  testdata.yaml
abc019/abc019_3/: .task.toml  main.go
abc019/abc019_4/: .task.toml
abc020/abc020_a/: testdata.yaml
abc020/abc020_b/: .task.toml  main.go  testdata.yaml
abc020/abc020_c/: main.go  testdata.yaml
abc020/abc020_d/: testdata.yaml
abc021/abc021_a/: .task.toml  main.go
abc021/abc021_b/: main.go
abc021/abc021_c/: .task.toml  main.go  testdata.yaml
abc021/abc021_d/: .task.toml  testdata.yaml
abc022/abc022_a/: testdata.yaml
abc022/abc022_b/: .task.toml  a.out  main.go
abc022/abc022_c/: testdata.yaml
abc022/abc022_d/: main.go  testdata.yaml
abc023/abc023_a/: main.go
abc023/abc023_b/: .task.toml  a.out
abc023/abc023_c/: main.go
abc023/abc023_d/: .task.toml  a.out  main.go
abc024/abc024_a/: .task.toml  main.go
abc024/abc024_b/: a.out  main.go
abc024/abc024_c/: main.go
abc024/abc024_d/: testdata.yaml
abc025/abc025_a/: .task.toml  main.go
abc025/abc025_b/: main.go  testdata.yaml
abc025/abc025_c/: main.go
abc025/abc025_d/: main.go  testdata.yaml
abc026/abc026_a/: .task.toml  testdata.yaml
abc026/abc026_b/: a.out  main.go
abc026/abc026_c/: .task.toml
abc026/abc026_d/: testdata.yaml
abc027/abc027_a/: testdata.yaml
abc027/abc027_b/: main.go  testdata.yaml
abc027/abc027_c/: main.go  testdata.yaml
abc027/abc027_d/: .task.toml
abc028/abc028_a/: a.out
abc028/abc028_b/: main.go
abc028/abc028_c/: main.go  testdata.yaml
abc028/abc028_d/: .task.toml  testdata.yaml
abc029/abc029_a/: .task.toml  main.go  testdata.yaml
abc029/abc029_b/: .task.toml  main.go  testdata.yaml
abc029/abc029_d/: .task.toml  testdata.yaml
abc030/abc030_a/: .task.toml  testdata.yaml
abc030/abc030_b/: .task.toml  a.out  main.go
abc030/abc030_c/: .task.toml  main.go
abc030/abc030_d/: main.go
abc031/abc031_b/: a.out  main.go
abc031/abc031_c/: .task.toml  testdata.yaml
abc032/abc032_a/: .task.toml  a.out
abc032/abc032_b/: .task.toml  main.go  testdata.yaml
abc032/abc032_c/: main.go  testdata.yaml
abc032/abc032_d/: main.go
abc033/abc033_a/: .task.toml  a.out  testdata.yaml
abc033/abc033_b/: .task.toml  a.out  main.go  testdata.yaml
abc033/abc033_c/: .task.toml
abc033/abc033_d/: .task.toml  main.go
abc034/abc034_b/: main.go
abc035/abc035_a/: .task.toml
abc035/abc035_b/: testdata.yaml
abc035/abc035_c/: .task.toml  main.go
abc035/abc035_d/: .task.toml  main.go  testdata.yaml
abc036/abc036_a/: main.go
abc037/abc037_b/: a.out  (+2 more)
atcoder/rust/abc003/: Cargo.toml
atcoder/rust/abc007/: Cargo.toml
atcoder/rust/abc095/: Cargo.toml
atcoder/rust/agc013/: Cargo.toml
atcoder/rust/agc013/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
atcoder/rust/code-festival-2017-qualc/: Cargo.toml
atcoder/rust/code-festival-2017-qualc/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
atcoder/rust/code-thanks-festival-2017-open/: Cargo.toml
atcoder/rust/code-thanks-festival-2017-open/testcases/: a.yml  b.yml  d.yml  f.yml
atcoder/rust/joi2011yo/: Cargo.toml
atcoder/rust/joi2011yo/testcases/: a.yml  b.yml  d.yml  e.yml  f.yml
atcoder/rust/tdpc/: Cargo.toml
atcoder/rust/tdpc/testcases/: a.yml
atcoder/rust/typical90/: Cargo.toml
atcoder/rust/typical90/testcases/: 001.yml  002.yml  003.yml  004.yml  005.yml  006.yml  007.yml  008.yml  009.yml  010.yml  011.yml  012.yml  013.yml  014.yml  015.yml  016.yml  017.yml  018.yml  019.yml  020.yml  021.yml  022.yml  023.yml  024.yml  025.yml  026.yml  027.yml  028.yml  029.yml  030.yml  031.yml  032.yml  033.yml  034.yml  035.yml  036.yml  037.yml  038.yml  039.yml  040.yml  (+46 more)
codeforces/: compete.toml
go/: go.mod
rust/: compete.toml
util/: array.go  graph.go  integer.go  io.go  string.go  tree.go
utils/: float.go  integer.go  map.go  string.go
yukicoder/: compete.toml
(+3540 files in other folders)
