[package]
name = "tdpc"
version = "0.1.0"
authors = ["k-yomo <kanji.yy@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "tdpc-a", problem = { platform = "atcoder", contest = "tdpc", index = "A", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_contest" } }
b = { name = "tdpc-b", problem = { platform = "atcoder", contest = "tdpc", index = "B", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_game" } }
c = { name = "tdpc-c", problem = { platform = "atcoder", contest = "tdpc", index = "C", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_tournament" } }
d = { name = "tdpc-d", problem = { platform = "atcoder", contest = "tdpc", index = "D", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_dice" } }
e = { name = "tdpc-e", problem = { platform = "atcoder", contest = "tdpc", index = "E", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_number" } }
f = { name = "tdpc-f", problem = { platform = "atcoder", contest = "tdpc", index = "F", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_semiexp" } }
g = { name = "tdpc-g", problem = { platform = "atcoder", contest = "tdpc", index = "G", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_lexicographical" } }
h = { name = "tdpc-h", problem = { platform = "atcoder", contest = "tdpc", index = "H", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_knapsack" } }
i = { name = "tdpc-i", problem = { platform = "atcoder", contest = "tdpc", index = "I", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_iwi" } }
j = { name = "tdpc-j", problem = { platform = "atcoder", contest = "tdpc", index = "J", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_ball" } }
k = { name = "tdpc-k", problem = { platform = "atcoder", contest = "tdpc", index = "K", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_target" } }
l = { name = "tdpc-l", problem = { platform = "atcoder", contest = "tdpc", index = "L", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_cat" } }
m = { name = "tdpc-m", problem = { platform = "atcoder", contest = "tdpc", index = "M", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_house" } }
n = { name = "tdpc-n", problem = { platform = "atcoder", contest = "tdpc", index = "N", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_tree" } }
o = { name = "tdpc-o", problem = { platform = "atcoder", contest = "tdpc", index = "O", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_string" } }
p = { name = "tdpc-p", problem = { platform = "atcoder", contest = "tdpc", index = "P", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_eel" } }
q = { name = "tdpc-q", problem = { platform = "atcoder", contest = "tdpc", index = "Q", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_concatenation" } }
r = { name = "tdpc-r", problem = { platform = "atcoder", contest = "tdpc", index = "R", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_graph" } }
s = { name = "tdpc-s", problem = { platform = "atcoder", contest = "tdpc", index = "S", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_grid" } }
t = { name = "tdpc-t", problem = { platform = "atcoder", contest = "tdpc", index = "T", url = "https://atcoder.jp/contests/tdpc/tasks/tdpc_fibonacci" } }

[[bin]]
name = "tdpc-a"
path = "src/bin/a.rs"

[[bin]]
name = "tdpc-b"
path = "src/bin/b.rs"

[[bin]]
name = "tdpc-c"
path = "src/bin/c.rs"

[[bin]]
name = "tdpc-d"
path = "src/bin/d.rs"

[[bin]]
name = "tdpc-e"
path = "src/bin/e.rs"

[[bin]]
name = "tdpc-f"
path = "src/bin/f.rs"

[[bin]]
name = "tdpc-g"
path = "src/bin/g.rs"

[[bin]]
name = "tdpc-h"
path = "src/bin/h.rs"

[[bin]]
name = "tdpc-i"
path = "src/bin/i.rs"

[[bin]]
name = "tdpc-j"
path = "src/bin/j.rs"

[[bin]]
name = "tdpc-k"
path = "src/bin/k.rs"

[[bin]]
name = "tdpc-l"
path = "src/bin/l.rs"

[[bin]]
name = "tdpc-m"
path = "src/bin/m.rs"

[[bin]]
name = "tdpc-n"
path = "src/bin/n.rs"

[[bin]]
name = "tdpc-o"
path = "src/bin/o.rs"

[[bin]]
name = "tdpc-p"
path = "src/bin/p.rs"

[[bin]]
name = "tdpc-q"
path = "src/bin/q.rs"

[[bin]]
name = "tdpc-r"
path = "src/bin/r.rs"

[[bin]]
name = "tdpc-s"
path = "src/bin/s.rs"

[[bin]]
name = "tdpc-t"
path = "src/bin/t.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
